Added form to index.hmtl. Updated styles.css for errors. Updated main.js for jquery validation. Also, updated main.js to start a new page to append localStorage to. Bugs are present. Backing out of JSON data list keeps list in place, even though it is called to hide on a switch case. Also, Form Data is not being saved. Even with modifications to the main.js, there is an issue causing it to not to be saved. Last bug present is the date box, it is rejecting the date input no matter the format put in. Even withou the class='required', it is being rejected by the validation. Will continue to work on bugs.

--- a/Gold/css/styles.css
+++ b/Gold/css/styles.css
@@ -27,6 +27,12 @@ https://github.com/AlucardFair/MiU-Project-3
 	text-indent: 40px;
 }
 
+label.error {
+	display: block;
+	margin: 10px 0;
+	color: #FF0000;
+}
+
 /*
 body {
 	font-family: Helvetica, Roboto, Droid-Sans;
