New page added for attribution of used plugin (DateBox). All bugs fixed occuring with saveData() and getData() within main.js. styles.css updated to show dominant Save! button. Bronze additem.html page updated to remove placeholders. Final push.

--- a/Gold/css/styles.css
+++ b/Gold/css/styles.css
@@ -29,8 +29,12 @@ https://github.com/AlucardFair/MiU-Project-3
 
 label.error {
 	display: block;
-	margin: 10px 0;
+	margin: 20px 10px;
 	color: #FF0000;
+}
+
+.ui-btn-up-b {
+	background-image: -webkit-linear-gradient(bottom, rgb(147,84,22), rgb(199,136,74), rgb(250,187,25));
 }
 
 /*
